아코디언 기능 구현 완료, 세부css수정

--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
 
 <body>
     <header id="hd">
+        
         <div class="">
             <h1 class="text-center p-2"><img src="./img/logo.png" alt="로고"></h1>
             <div class="hdbg">
                 <ul class="gnb d-flex align-items-center justify-content-between container mb-0">
                     <li><a href="">NEWS & FEATURES</a></li>
                     <li><a href="">QUIZZES & PUZZLES</a></li>
-                    <li><a href="">HOGWARTS SORTING</a></li>
+                    <li><a href="./sub.html" class="red">HOGWARTS SORTING</a></li>
                     <li><a href="">CHRISTMAS</a></li>
                     <li><a href="">SHOP</a></li>
                 </ul>
@@ -117,14 +118,26 @@
 
         </div>
     </section>
-    <footer>
-        <p></p>
-        <h1></h1>
+    <section id="bgImg">
+        <div></div>
+    </section>
+    <a href="" id="go-top" class="d-flex flex-column">
+        <img src="./img/top.png" alt="go-top">
+        top
+    </a>
+    <footer id="footer" class="p-3">
+        <p class="text-center">© 마법사 세계 디지털 2023 <br>
+            포터모어를 찾고 계시나요? Wizarding World는 Harry Potter와 Fantastic Beasts의 새로운 공식 홈입니다. 팬클럽에 가입하여 당신의 특성을 가져오세요. <br>
+            Warner Bros.와 Pottermore의 파트너십인 Wizarding World Digital이 제공합니다. Wizarding World와 파트너의 최신 뉴스와 공식 제품을 전달합니다.
+            <br>
+            TM & © WBEI. WIZARDING WORLD 출판 및 연극 무대 권리 © JK Rowling.
+        </p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/swiper.js"></script>
     <script src="./js/tap.js"></script>
+    <script src="./js/gotop.js"></script>
 </body>
 
 </html>
